# telescope

./: .gitignore  .pylintrc  .shellcheckrc  .tflint.hcl  .yamllint  CLAUDE.md  CODEOWNERS  PIPELINE_SCHEDULES.md  README.md  cluster-template-apiserver-ilb-load-willie.yaml  create-aks-udr.sh  deployment.yaml  investigation.md  karpenter-values-fix.yaml  overrides.yaml  owners.txt  pyproject.toml  ruff.toml  run-cri.sh  run-slo.sh  run-terraform.sh  test  test-nap.sh  x.json
modules/python/: .coveragerc  __init__.py  attach-detach.sh  generate-table.py  parse-iperf2.py  pod-failover-samezone.sh  pyproject.toml  requirements.txt  results.json  run-karpenter.sh
modules/python/aks_store_demo/: __init__.py  aks_store_demo.py
modules/python/autoscale/: autoscale.py  azure_deployment_template.yaml  deployment_template.yaml
modules/python/client/: kubernetes_client.py
modules/python/clients/: __init__.py  aks_client.py  aks_machine_client.py  aks_machine_client_helpers.py  aks_machine_custom_features.py  azure_client.py  docker_client.py  eks_client.py  kubernetes_client.py  pod_command.py
modules/python/clusterloader2/: Dockerfile  Makefile  __init__.py  base.py  docker_client.py  kubernetes_client.py  utils.py
modules/python/clusterloader2/automatic/: automatic.py
modules/python/cost_analysis/: README.md  __init__.py  k8s_cost_collector.py  opencost_live_exporter.py
modules/python/crud/: README.md  collect.py  crud.py  main.py  operation.py
modules/python/csi/: csi.py
modules/python/fio/: Dockerfile  README.md  fio.py  test.sh  zfs.sh
modules/python/gpu/: README.md  gpu.py  main.py
modules/python/iperf2/: parser.py  runner.py
modules/python/iperf3/: README.md  iperf3.py  iperf3_pod.py  parser.py
modules/python/jmeter/: parser.py
modules/python/k8s/: README_node_pool.md  collect.py  latency_decorators.py  node_pool_crud.py  node_pool_dynamic_operations.py  node_pool_operations.py
modules/python/kbench/: README.md  collect.py  collect_cp.py  execute.py  validate.py
modules/python/kusto/: generate_commands.py
modules/python/kwok/: kwok.py
modules/python/machine/: collect.py  data_classes.py  machine_manager.py  main.py  result_handler.py
modules/python/ncps/: parser.py
modules/python/pipelines/: pipelines.py  test.json
modules/python/scaffolding/: generator.py  input_template.yml  template_generator.py
modules/python/sockperf/: parser.py
modules/python/ssh/: runner.py
modules/python/templates/: template_generator.py
modules/python/terraform/: extract_terraform_operation_metadata.py  extract_terraform_operation_time.py  validate_json_schema.py
modules/python/tests/: test_aks_machine_batch.py  test_aks_machine_client.py  test_aks_machine_client_helpers.py  test_aks_machine_custom_features.py  test_autoscale.py  test_cli.py  test_clusterloader2base.py  test_clustermesh_scale.py  test_cri.py  test_crud_main.py  test_csi.py  test_default_cli.py  test_extract_terraform_operation_metadata.py  test_fio.py  test_generate_commands.py  test_image_pull.py  test_iperf2_parser.py  test_iperf2_runner.py  test_iperf3_parser.py  test_jmeter_parser.py  test_job_controller.py  test_kubernetes_client.py  test_large_cluster.py  test_large_module.py  test_machine_collect.py  test_machine_crud.py  test_machine_data_classes.py  test_machine_main.py  test_machine_manager.py  test_machine_result_handler.py  test_ncps_parser.py  test_network_policy_scale.py  test_network_scale.py  test_pipelines.py  test_scale.py  test_slo.py  test_sockperf_parser.py  test_ssh_runner.py  test_validate_json_schema.py  test_wrk_parse.py
modules/python/utils/: calculate_duration.py  common.py  constants.py  logger_config.py  operation.py  parameters.py  retries.py
modules/python/vmagent_loadtest/: __init__.py  adx.py  certs.py  cluster.py  compare.py  config.py  deploy.py  main.py  metrics.py  runner.py  scaling.py  utils.py
modules/python/wrk/: parser.py
(+2636 files in other folders)
