[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telescope-benchmarks"
version = "0.1.0"
description = "Tools for running performance benchmarks across cloud providers"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Telescope Project Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
]
dynamic = ["dependencies"]

[project.urls]
Source = "https://github.com/Azure/telescope"
Documentation = "https://github.com/Azure/telescope/tree/main/modules/python"

[tool.setuptools]
packages = ["kwok"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[project.scripts]
telescope-kwok = "kwok.kwok:main"
